[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/actor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 3.5 )

[sub_resource type="Theme" id=2]

[node name="actor" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 8.0
margin_bottom = 8.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementRayCast" type="RayCast2D" parent="."]
position = Vector2( 4, 4 )
cast_to = Vector2( 0, 8 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D"]
position = Vector2( 8, 0 )

[node name="BulletRayCast" type="RayCast2D" parent="Node2D"]
cast_to = Vector2( 8, 0 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
